--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   /* ------------------------ */
   body {
     font-family: sans-serif;
+    color: #343a40;
   }
   
   .container {
@@ -20,7 +21,7 @@
   section {
     margin-bottom: 48px;
   }
-  
+
   h2 {
     margin-bottom: 48px;
     font-size: 36px;
@@ -34,6 +35,30 @@
     column-gap: 80px;
   }
   
+.btn:link, 
+.btn:visited {
+  background-color: #087f5b;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 500;
+  display: inline-block;
+}
+
+.btn:hover,
+.btn:active{
+  background-color: #099268;
+}
+
+.btn--big {
+  padding: 16px 32px;
+  font-size: 18px;
+}
+
+.btn--small {
+  font-size: 14px;
+  padding: 8px 12px;
+}
   /* ------------------------ */
   /* COMPONENT STYLES */
   /* ------------------------ */
