--- a/style.css
+++ b/style.css
@@ -81,6 +81,8 @@
     line-height: 1.1;
     letter-spacing: -1px;
     /* 44 , 52 , 62 */
+
+    text-shadow: 0px 5px 5px  rgba(0, 0, 0, 0.4);
   }
   
   .header-text {
@@ -138,6 +140,10 @@
   }
   
   /* CHAIRS */
+  .chair {
+    box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.1);
+  }
+
   .chair-box {
     padding: 24px;
   }
