--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@
   text-transform: uppercase;
   font-weight: 500;
   display: inline-block;
+  border-radius: 100px;
 }
 
 .btn:hover,
@@ -58,6 +59,10 @@
 .btn--small {
   font-size: 14px;
   padding: 8px 12px;
+}
+
+img {
+  border-radius: 12px;
 }
   /* ------------------------ */
   /* COMPONENT STYLES */
@@ -118,6 +123,7 @@
     background-color: #087f5b;
     color: #fff;
     padding: 16px 18px;
+    border-radius: 12px;
   }
   
   .testimonial-box {
@@ -142,6 +148,12 @@
   /* CHAIRS */
   .chair {
     box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+  }
+
+  .chair img {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
   }
 
   .chair-box {
