--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@
   
   header,
   section {
-    margin-bottom: 48px;
+    margin-bottom: 96px;
+    /* 64 , 80 , 96 */
   }
 
   h2 {
@@ -73,7 +74,8 @@ img {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 80px;
-    margin-top: 48px;
+    margin-top: 64px;
+    /* 64 , 80 , 96 */
   }
   
   .header-text-box {
@@ -81,13 +83,13 @@ img {
   }
   
   h1 {
-    margin-bottom: 24px;
+    margin-bottom: 32px;
     font-size: 44px;
     line-height: 1.1;
     letter-spacing: -1px;
     /* 44 , 52 , 62 */
 
-    text-shadow: 0px 5px 5px  rgba(0, 0, 0, 0.4);
+    text-shadow: 0px 5px 5px  rgba(0, 0, 0, 0.1);
   }
   
   .header-text {
@@ -105,7 +107,7 @@ img {
     stroke: #087f5b;
     width: 32px;
     height: 32px;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
   }
   
   .features-title {
@@ -143,8 +145,13 @@ img {
     font-size: 18px;
     /* 16 , 18 , 20 */
     line-height: 1.7;
+    color: #e6fcf5;
   }
   
+  .testimonial-author {
+    color: #c3fae8;
+  }
+
   /* CHAIRS */
   .chair {
     box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.1);
@@ -157,7 +164,7 @@ img {
   }
 
   .chair-box {
-    padding: 24px;
+    padding: 32px;
   }
   
   h3 {
@@ -167,14 +174,14 @@ img {
   
   .chair-details {
     list-style: none;
-    margin-bottom: 24px;
+    margin-bottom: 48px;
   }
   
   .chair-details li {
     display: flex;
     align-items: center;
     gap: 12px;
-    margin-bottom: 24px;
+    margin-bottom: 16px;
   }
   
   .chair-details li:last-child {
@@ -185,13 +192,13 @@ img {
     stroke: #087f5b;
     width: 24px;
     height: 24px;
-    margin-right: 8px;
   }
   
   .chair-price {
     display: flex;
     justify-content: space-between;
     font-size: 20px;
+    align-items: center;
     /* 16 , 18 , 20 , 24 */
   }
   
